fixed share button on iphone

--- a/wc-dettagliofunerale/src/components/components/dettaglio-morte/dettaglio-morte.css
+++ b/wc-dettagliofunerale/src/components/components/dettaglio-morte/dettaglio-morte.css
@@ -193,6 +193,7 @@
   background-color: white;
   border-radius: 8px;
   border: 1px solid #11b3ef;
+  min-width: 120px;
 }
 
 .azione-label {
